--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="CSS/mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
 
 </head>
 <body>
